--- a/src/templates/comment_list.hbs
+++ b/src/templates/comment_list.hbs
@@ -9,7 +9,10 @@
   <div class="vac-comments-control-bar">
     <div class="vac-range"><b>@</b> {{rangeStr}}</div>
     <div class="vac-control-buttons">
-      <a class="vac-delete-annotation">DELETE</a> | <a class="vac-close-comment-list">CLOSE</a>
+      {{#if permissionToDeleteAnnotation}}
+      <a class="vac-delete-annotation">DELETE</a> |
+      {{/if}}
+      <a class="vac-close-comment-list">CLOSE</a>
     </div>
   </div>
 </div>
